--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <title>Scrolling Nav - Start Bootstrap Template</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/static/static2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="static/static2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/static/static2/css/scrolling-nav.css" rel="stylesheet">
+  <link href="static/static2/css/scrolling-nav.css" rel="stylesheet">
 
 </head>
 
@@ -84,7 +84,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>Graph</h2>
           <p class="lead"> {{image}}
-            <img src="/static/images/plot.png" style = "width: 600px; height: 600px"> <!-- this part diplays by plot-->
+            <img src="static/images/plot.png" style = "width: 600px; height: 600px"> <!-- this part diplays by plot-->
 
           </p>
         </div>
@@ -101,14 +101,14 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="/static/static2/vendor/jquery/jquery.min.js"></script>
-  <script src="/static/static2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="static/static2/vendor/jquery/jquery.min.js"></script>
+  <script src="static/static2/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="/static/static2/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="static/static2/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom JavaScript for this theme -->
-  <script src="/static/static2/js/scrolling-nav.js"></script>
+  <script src="static/static2/js/scrolling-nav.js"></script>
 
 </body>
 
