--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="static/static2/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="static/static2/css/scrolling-nav.css" rel="stylesheet">
+  <link href="css/scrolling-nav.css" rel="stylesheet">
 
 </head>
 
@@ -108,7 +108,7 @@
   <script src="static/static2/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom JavaScript for this theme -->
-  <script src="static/static2/js/scrolling-nav.js"></script>
+  <script src="js/scrolling-nav.js"></script>
 
 </body>
 
