--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>Graph</h2>
           <p class="lead"> {{image}}
-            <img src="static/images/plot.png" style = "width: 600px; height: 600px"> <!-- this part diplays by plot-->
+            <img src="images/plot.png" style = "width: 600px; height: 600px"> <!-- this part diplays by plot-->
 
           </p>
         </div>
